implementacao todos os metodos