@@ -38,7 +38,7 @@ public class Frota {
 	}
 
 	public CarroVoador consultaCarroVoadorMaisBarato() {
-		CarroVoador aux = frota.get(0);
+		CarroVoador aux = frota.getFirst();
 		for (CarroVoador carroVoador : frota) {
 			if (carroVoador.getValor() < aux.getValor()) {
 				aux = carroVoador;
@@ -54,5 +54,40 @@ public class Frota {
 			return true;
 		}
 		return false;
+	}
+
+	public CarroVoador consultaCarroVoadorValorMedia() {
+		CarroVoador aux = frota.getFirst();
+		double sum = 0;
+		double media = 0;
+		int temCliente = 0;
+		for (CarroVoador carroVoador : frota) {
+			if (carroVoador.getCliente() != null) {
+				sum += carroVoador.getValor();
+				temCliente++;
+			}
+		}
+		media = sum / temCliente;
+		ArrayList<CarroVoador> carrosVoadoresComCliente = new ArrayList<CarroVoador>();
+		for (CarroVoador carroVoador : frota) {
+			if (carroVoador.getCliente() != null) {
+				carrosVoadoresComCliente.add(carroVoador);
+			}
+		}
+
+		if (carrosVoadoresComCliente.isEmpty()) {
+			return null;
+		}
+
+		double minDiff = Math.abs(aux.getValor() - media);
+
+		for (CarroVoador carroVoador : carrosVoadoresComCliente) {
+			double diff = Math.abs(carroVoador.getValor() - media);
+			if (diff < minDiff) {
+				minDiff = diff;
+				aux = carroVoador;
+			}
+		}
+		return aux;
 	}
 }
